--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             Download</button>
         </div>
         <div class="col-lg-6">
-          <img class="title-image" style="width:50%;" src="images/mobile_couple.png" alt="iphone-mockup">
+          <img class="title-image" style="width:30%;" src="images/mobile_couple.png" alt="iphone-mockup">
         </div>
       </div>
 
@@ -135,7 +135,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
